# displaycal-py3

./: .coveragerc  .editorconfig  .flake8  .gitignore  DisplayCAL-3DLUT-maker.pyw  DisplayCAL-VRML-to-X3D-converter.pyw  DisplayCAL-scripting-client.pyw  Makefile  README.md  packages.list  pyproject.toml  qodana.sarif.json  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest.yml
DisplayCAL/: CGATS.py  ICCProfile.py  RealDisplaySizeMM.py  TaskbarLib.idl  __init__.py  __main__.py  argyll.py  argyll_RGB2XYZ.py  argyll_cgats.py  argyll_instruments.py  argyll_names.py  argyll_rgb2xyz.py  audio.py  ccmx.py  cgats.py  chromecast_patterngenerator.py  colord.py  colormath.py  common.py  common_constants.py  config.py  config_parser.py  constants.py  cubeiterator.py  debughelpers.py  defaultpaths.py  demjson_compat.py  display_cal.py  edid.py  embeddedimage.py  encodedstdio.py  encoding.py  floatspin.py  freeze.py  get_data_path.py  get_hidpi_scaling_factor.py  get_standard_profiles.py  get_total_patches.py  getbitmap.py  getcfg.py  (+96 more)
DisplayCAL/dev/: __init__.py  mocks.py
DisplayCAL/lang/: en.yaml  it.yaml
DisplayCAL/lib/agw/: __init__.py  artmanager.py  fmresources.py  fourwaysplitter.py  gradientbutton.py  labelbook.py  pygauge.py
DisplayCAL/lib64/python311/: RealDisplaySizeMM.cp311-win_amd64.pyd
docs/: install_instructions_linux.md  install_instructions_macos.md  install_instructions_windows.md
misc/: DisplayCAL-Setup-0install-per-user.iss  DisplayCAL-Setup-0install.iss  DisplayCAL-Setup-py2exe.iss  DisplayCAL.dsc  DisplayCAL.pyi.spec  DisplayCAL.spec  PKGBUILD  README.template.html  build_and_launch.cmd  build_windows_installer.cmd  debian.control  debian.copyright  setup.debian.cfg  setup.fedora.cfg  setup.mandriva.cfg  setup.mandriva64.cfg  setup.openSUSE.cfg  setup.ubuntu.cfg
misc/py2exe/: icon.py
misc/xrced_plugins/: xh_floatspin.py
scripts/: displaycal  displaycal-3dlut-maker  displaycal-apply-profiles  displaycal-apply-profiles-launcher  displaycal-curve-viewer  displaycal-eecolor-to-madvr-converter  displaycal-profile-info  displaycal-scripting-client  displaycal-synthprofile  displaycal-testchart-editor  displaycal-vrml-to-x3d-converter  displaycal-vrml-to-x3d-converter-console
src/DisplayCAL/: display_cal.py  freeze.py  setup.py
src/displaycal.egg-info/: PKG-INFO
src/misc/: DisplayCAL-Setup-py2exe.iss  DisplayCAL.spec  appimage.yml
tests/: conftest.py  test_CGATS.py  test_ICCProfile.py  test_argyll.py  test_argyll_RGB2XYZ.py  test_argyll_cgats.py  test_argyll_instruments.py  test_argyll_rgb2xyz.py  test_colord.py  test_colormath.py  test_config.py  test_display_cal.py  test_edid.py  test_jspacker.py  test_lazydict.py  test_localization.py  test_real_display_size_mm.py  test_setup.py  test_taskscheduler.py  test_util_dict.py  test_util_str.py  test_worker.py  test_worker_base.py  test_wx_display_adjustment_frame.py  test_wx_display_uniformity_frame.py  test_wx_measure_frame.py  test_wx_report_frame.py  test_wxuntetheredframe.py  test_wxversion.py  test_wxwindows.py
tests/data/: display_data.py  dispwin_output_1.txt  dispwin_output_2.txt  dispwin_output_3.txt  dispwin_output_4.txt  xrandr_output_1.txt  xrandr_output_2.txt  xrandr_output_3.txt  xrandr_output_4.txt
util/: 0install_desktop.py  DisplayCAL_postinstall.py  DisplayCAL_postuninstall.py  apply_cal_diff_from_icc.py  bt2390_test.pyw  change_display_profile_cal_whitepoint.py  check_changelog_match.py  check_x_xrandr_icc.py  code_structure_report.py  convert_hwdb_to_pnp_ids.py  convert_translations_json_to_yaml.py  create_8bit_gradient.py  create_rendering_intent_test_profile.py  create_testcharts.py  cubicgrid.py  dist.cmd  dist_obs.sh  dist_py2exe.cmd  dump_x_profiles.py  find_abstract_profiles.py  find_argl_profiles.py  find_chad_profiles.py  find_chrm_profiles.py  find_clrt_profiles.py  find_colorspace_profiles.py  find_iCCP_pngs.py  find_icc_v2_unicode_desc_profiles.py  find_icc_v4_profiles.py  find_identity_curve_profiles.py  lincal.py  localization_find_potentially_unused_strings.py  make-site-package-dist.py  nearneutrals.py  ppdir.py  profileinfo.py  scale_cal.py  set_profile_desc_to_basename_sans_ext.py  spyd4cal_to_ccss.py  standalone-tools-icons.py  sync_translations.py  (+6 more)
