[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "pywin32; sys_platform == 'win32'",
    "setuptools",
    "wxPython >= 4.2.2",
]

[project]
authors = [
    {name = "Florian Höch", email = "florian@displaycal.net"},
    {name = "Erkan Özgür Yılmaz", email = "eoyilmaz@gmail.com"},
    {name = "Patrick Zwerschke", email = "patrick@p5k.org"},
]
classifiers = [
    # Maturity of this project. Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",

    # Who the project is intended for
    "Intended Audience :: End Users/Desktop",

    # License
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Operating System :: OS Independent",

    # Supported Python versions.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "build",
    "certifi",
    "comtypes; sys_platform == 'win32'",
    "dbus-python; sys_platform == 'linux'",
    "distro",
    "future",
    "numpy",
    "pillow",
    "protobuf",
    "PyChromecast",
    "pywin32; sys_platform == 'win32'",
    "QtPy",
    "Send2Trash",
    "WMI; sys_platform == 'win32'",
    "wxPython >= 4.2.2",
    "zeroconf",
]
description = "Display calibration and profiling with a focus on accuracy and versatility"
dynamic = ["version"]
maintainers = [
    {name = "Erkan Özgür Yılmaz", email = "eoyilmaz@gmail.com"},
]
name = "DispayCAL"
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "darglint",
    "flake8",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-mutable",
    "flake8-pep3101",
    "flake8-spellcheck",
    "matplotlib",
    "ppdir",
    "py2app; sys_platform == 'darwin'",
    "py2exe; sys_platform == 'win32'",
    "pyglet",
    "pytest",
    "pytest-cov",
    "pytest-github-actions-annotate-failures",
    "pytest-xdist",
    "snowballstemmer",
    "twine",
    "wheel",
]
tests = [
    "build",
    "certifi",
    "dbus-python; sys_platform == 'linux'",
    "distro",
    "numpy",
    "pillow",
    "PyChromecast",
    "Send2Trash",
    "wxPython >= 4.2.2; python_version >= '3.12'",
    "wxPython >= 4.1.1; python_version < '3.12'",
    "zeroconf",
]

[project.urls]
Homepage = "https://displaycal.net/"
Download = "https://github.com/eoyilmaz/displaycal-py3/releases/download/3.9.14/DisplayCAL-3.9.14.tar.gz"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
