[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {name = "Florian Höch", email = "florian@displaycal.net"},
    {name = "Erkan Özgür Yılmaz", email = "eoyilmaz@gmail.com"},
    {name = "Patrick Zwerschke", email = "patrick@p5k.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
description = "Display calibration and profiling with a focus on accuracy and versatility"
dynamic = ["version", "dependencies"]
maintainers = [
    {name = "Erkan Özgür Yılmaz", email = "eoyilmaz@gmail.com"},
]
name = "DispayCAL"
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
"Home Page" = "https://displaycal.net/"
GitHub = "https://github.com/eoyilmaz/displaycal-py3"
Repository = "https://github.com/eoyilmaz/displaycal-py3.git"
Download = "https://github.com/eoyilmaz/displaycal-py3/releases/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.package-data]
DisplayCAL = ["VERSION", "py.typed"]

[tool.setuptools.exclude-package-data]
DisplayCAL = [
    "docs",
    "man",
    "misc",
    "screenshots",
    "test_dir",
    "tests",
    "theme",
    "util"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["requirements-dev.txt"] }
version = { file = ["VERSION"] }

[tool.black]

[tool.flake8]
exclude = [
    ".github",
    "__pycache__",
    ".coverage",
    ".DS_Store",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "DisplayCAL.egg-info",
    "dist",
    "docs",
    "misc",
    "screenshots",
    "test_dir",
    "tests",
    "theme",
    "util",
]
extend-select = ["B950"]
ignore = ["D107", "E203", "E501", "E701", "SC200", "W503"]
max-complexity = 12
max-line-length = 80

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.tox]
requires = ["tox>=4.23.2"]
env_list = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "run the tests with pytest"
package = "wheel"
wheel_build_env = ".pkg"
deps = [
    "pytest>=6",
    "pytest-cov",
    "pytest-xdist",
]
commands = [
    ["pytest"],
]

[tool.mypy]
