[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    'pywin32; platform_system=="Windows"',
    "numpy",  # very unnecessarily we require `numpy` for the build, will be removed in the future
]

[project]
authors = [
    {name = "Florian Höch", email = "florian@displaycal.net"},
    {name = "Erkan Özgür Yılmaz", email = "eoyilmaz@gmail.com"},
    {name = "Patrick Zwerschke", email = "patrick@p5k.org"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
description = "Display calibration and profiling with a focus on accuracy and versatility"
dynamic = ["version", "dependencies"]
license = "GPL-3.0-or-later"
maintainers = [
    {name = "Erkan Özgür Yılmaz", email = "eoyilmaz@gmail.com"},
]
name = "displaycal"
readme = "README.md"
requires-python = ">= 3.9"

[project.gui-scripts]
    displaycal = "DisplayCAL.main:main"
    displaycal-3dlut-maker = "DisplayCAL.main:main_3dlut_maker"
    displaycal-curve-viewer = "DisplayCAL.main:main_curve_viewer"
    displaycal-eecolor-to-madvr-converter = "DisplayCAL.main:main_eecolor_to_madvr_converter"
    displaycal-profile-info = "DisplayCAL.main:main_profile_info"
    displaycal-scripting-client = "DisplayCAL.main:main_scripting_client"
    displaycal-synthprofile = "DisplayCAL.main:main_synthprofile"
    displaycal-testchart-editor = "DisplayCAL.main:main_testchart_editor"
    displaycal-vrml-to-x3d-converter = "DisplayCAL.main:main_vrml_to_x3d_converter"
    displaycal-vrml-to-x3d-converter-console = "DisplayCAL.main:main_vrml_to_x3d_converter_console"

[project.urls]
"Home Page" = "https://displaycal.net/"
GitHub = "https://github.com/eoyilmaz/displaycal-py3"
Repository = "https://github.com/eoyilmaz/displaycal-py3.git"
Download = "https://github.com/eoyilmaz/displaycal-py3/releases/"

[tool.distutils.bdist_rpm]
doc-files = "LICENSE.txt README.html screenshots/ theme/"
fix-python = 1
packager = "Erkan Ozgur Yilmaz <eoyilmaz@gmail.com>"
post-install = "util/rpm_postinstall.sh"
post-uninstall = "util/rpm_postuninstall.sh"
release = 1
# keep_temp = 1

[tool.distutils.bdist_wheel]
universal = 0

[tool.distutils.install]
record = "INSTALLED_FILES"

[tool.bdist_wininst]
bitmap = "misc/media/install-py.bmp"
install_script = "util/DisplayCAL_postinstall.py"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.package-data]
DisplayCAL = [
    "beep.wav",
    "cacert.pem",
    "camera_shutter.wav",
    "ColorLookupTable.fx",
    "dev/**",
    "DisplayCAL.iss",
    "lang/**",
    "lib/**",
    "LICENSE.txt",
    "linear.cal",
    "misc/**",
    "pnp.ids",
    "presets/**",
    "py.typed",
    "README.html",
    "README.md",
    "ref/**",
    "report/**",
    "screenshots/**",
    "test.cal",
    "theme/**",
    "ti1/**",
    "util/**",
    "VERSION_BASE",
    "VERSION",
    "x3d-viewer/**",
    "xrc/**",
]

[tool.setuptools.exclude-package-data]
DisplayCAL = [
    "docs",
    "man",
    "misc",
    "test_dir",
    "tests",
    "theme",
    "util"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.test = { file = ["requirements-dev.txt"] }
version = { file = ["VERSION"] }

[tool.black]
line-length = 88

[tool.flake8]
exclude = [
    ".github",
    "__pycache__",
    ".coverage",
    ".DS_Store",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "cacert.pem",
    "DisplayCAL.egg-info",
    "DisplayCAL/ref",
    "dist",
    "docs",
    "INSTALLED_FILES",
    "MANIFEST.in",
    "misc",
    "screenshots",
    "test_dir",
    "tests",
    "tests/data/icc",
    "theme",
    "util",
    "VERSION",
]
extend-select = ["B950"]
ignore = ["D107", "E203", "E501", "E701", "SC200", "W503"]
max-complexity = 12
max-line-length = 80
per-file-ignores = [
    "DisplayCAL/lib/agw/fmresources.py: B950"
]

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ANN",  # flake-annotations
    "ASYNC",  # flake-async
    "B",  # flake8-bugbear
    "C",  # McCabe complexity
    "C4",  # flake8-comprehensions
    "COM",  # flake8-commas
    "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FLY",  # flynt
    "I",  # isort
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",  # PEP8 Naming
    "NPY",  # NumPy-specific rules
    "PERF",  # perflint
    "PIE",  # flake8-pie
    "PLR",  # Pylint - Refactor
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific-rules
    "Q",  # flake8-quotes
    "S",  # flake-bandit
    "SIM",  # flake8-simplify
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "YTT",  # flake-2020

]
extend-ignore = [
    "COM812",  # flake8-commas
    "D107",  # skip docstring for __init__
    "D203",  # Incorrect blank line before class
    "D209",  # New line after last paragraph in docstring
    "D213",  # Multiline docstring summary second line
    "D412",  # Bland line between header and content
    "D416",  # Missing section name colon
    "E741",  # Ambiguous variable name
    "E402",  # Module level import not at top of file
    "RUF100", # Unused noqa
    "S105",  # Hardcoded password
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.tox]
requires = ["tox>=4.23.2"]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "run the tests with pytest"
package = "wheel"
wheel_build_env = ".pkg"
deps = [
    "pytest>=6",
    "pytest-cov",
    "pytest-xdist",
]
commands = [
    ["pytest"],
]

[tool.mypy]
