[bdist_rpm]
doc_files = LICENSE.txt README.html screenshots/ theme/
fix_python = 1
packager = Erkan Ozgur Yilmaz <eoyilmaz@gmail.com>
post_install = util/rpm_postinstall.sh
post_uninstall = util/rpm_postuninstall.sh
release = 1
# keep_temp = 1

[bdist_wheel]
universal = 0

[bdist_wininst]
bitmap = misc/media/install-py.bmp
install_script = util/DisplayCAL_postinstall.py

[install]
record = INSTALLED_FILES

[black]
line-length = 88

[metadata]
license_files = LICENSE.txt
name = DisplayCAL
version = attr: DisplayCAL.VERSION

[options]
install_requires =
    build
    certifi
    comtypes; sys_platform == "win32"
    dbus-python; sys_platform == "linux"
    distro
    future
    numpy
    pillow
    PyChromecast
    pywin32; sys_platform == "win32"
    QtPy
    Send2Trash
    WMI; sys_platform == "win32"
    wxPython>=4.2.2
    zeroconf
packages = find:
