[bdist_rpm]
doc_files = LICENSE.txt README.html screenshots/ theme/
fix_python = 1
packager = Erkan Ozgur Yilmaz <eoyilmaz@gmail.com>
post_install = util/rpm_postinstall.sh
post_uninstall = util/rpm_postuninstall.sh
release = 1
# keep_temp = 1

[bdist_wheel]
universal = 0

[bdist_wininst]
bitmap = misc/media/install-py.bmp
install_script = util/DisplayCAL_postinstall.py

[flake8]
exclude =
    # No need to traverse our github directory
    .github,
    # There's no value in checking cache directories
    __pycache__,
    .coverage,
    .DS_Store,
    .pytest_cache,
    .vscode,
    .venv,
    build,
    cacert.pem,
    DisplayCAL.egg-info,
    DisplayCAL/__version__.py,
    DisplayCAL/lib64,
    DisplayCAL/ref,
    # This contains builds of DisplayCAL that we don't want to check
    dist,
    INSTALLED_FILES,
    MANIFEST.in,
    tests/data/icc,
    venv,
    VERSION,
extend-select = B950
ignore = D107,E203,E501,E701,SC200,W503
max-complexity = 12
max-line-length = 80
per-file-ignores =
    DisplayCAL/lib/agw/fmresources.py: B950,
# select = B,C,E,F,W,T4,B901

[install]
record = INSTALLED_FILES

[black]
line-length = 88

[metadata]
license_files = LICENSE.txt
name = DisplayCAL
version = attr: DisplayCAL.VERSION

[options]
install_requires =
    build
    certifi
    comtypes; sys_platform == "win32"
    dbus-python; sys_platform == "linux"
    distro
    future
    numpy
    pillow
    PyChromecast
    pywin32; sys_platform == "win32"
    QtPy
    Send2Trash
    WMI; sys_platform == "win32"
    wxPython>=4.2.2
    zeroconf
packages = find:
